--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,40 @@
 -i https://pypi.python.org/simple/
-alembic==1.5.8
-blinker==1.4
-click==7.1.2
+alembic==1.15.2
+bleach==6.2.0
+blinker==1.9.0
+cachelib==0.13.0
+click==8.1.8
 cssmin==0.2.0
+dnspython==2.7.0
 email-validator==1.1.2
-flask-assets==0.12
-flask-caching==1.7.2
-flask-ckeditor==0.4.3
-flask-debugtoolbar==0.10.1
-flask-dropzone==1.5.3
+flask==3.1.0
+flask-assets==2.1.0
+flask-caching==2.3.1
+flask-ckeditor==1.0.0
+flask-debugtoolbar==0.16.0
+flask-dropzone==2.0.0
 flask-mail==0.9.1
-flask-migrate==2.5.2
-flask-sqlalchemy==2.5.1
-flask-wtf==0.14.2
-flask==1.0
-greenlet==1.0.0 ; python_version >= '3'
-itsdangerous==1.1.0
-jinja2==2.11.3
-jsmin==2.2.2
+flask-migrate==4.1.0
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.2
+greenlet==3.2.1 ; python_version >= '3'
+idna==3.10
+itsdangerous==2.2.0
+jinja2==3.1.6
+jsmin==3.0.0
 mako==1.1.4
-markupsafe==1.1.1
-python-dateutil==2.8.1
+pip==25.1.1
+markupsafe==3.0.2
+python-dateutil==2.9.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 python-http-client==3.3.2
 redis==3.2.1
 sendgrid==6.0.5
-six==1.15.0
-sqlalchemy==1.4.3
+six==1.17.0
+sqlalchemy==2.0.40
+typing_extensions==4.13.2
 webassets==2.0
-werkzeug==0.16.1
+webencodings==0.5.1
+werkzeug==3.1.3
 wtforms==2.3.3
